Fix for horizontal scroll div

--- a/css/main.scss
+++ b/css/main.scss
@@ -400,7 +400,7 @@ p {
     .hori-img {
         img {
             width: auto;
-            height: 800px;
+            height: 700px;
         }
     }
 }
